[tool.poetry]
name = "py-formatter"
version = "0.1.0"
description = ""
authors = ["wiliam chu <chudood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
isort = "^4.3.21"
black = "^19.10b0"
vulture = "^1.4"
mypy = "^0.770"

[tool.poetry.dev-dependencies]

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[mypy]
strict_optional = true
warn_redundant_casts = true
follow_imports = "skip"
warn_no_return = true
ignore_missing_imports = true



